--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -45,6 +45,12 @@ html {
     padding: 0.5rem 3rem;
     border-radius: 30px;
 }
+.btn-white {
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+    padding: 0.5rem 1rem;
+}
 
 section {
     padding: 3rem 0;
