--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -32,12 +32,14 @@ html {
 .flex {
     display: flex;
 }
+/* background */
 .bg-purple {
     background-color: rgb(151,146,228);
 }
 .bg-light-black {
     background-color: rgb(51,51,51);
 }
+/* bottoni */
 .btn-blue {
     color: white;
     font-weight: 700;
@@ -51,7 +53,13 @@ html {
     border-radius: 30px;
     padding: 0.5rem 1rem;
 }
-
+.btn-purple {
+    background-color: rgb(151,146,228);
+    color: white;
+    border-radius: 30px;
+    padding: 0.5rem 2.5rem;
+}
+/* sezioni */
 section {
     padding: 3rem 0;
 }
