--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -39,12 +39,15 @@ html {
 .bg-light-black {
     background-color: rgb(51,51,51);
 }
+.bg-grey {
+    background-color: rgb(51,51,51);
+}
 /* bottoni */
 .btn-blue {
     color: white;
     font-weight: 700;
     background-color: rgb(0,132,253);
-    padding: 0.5rem 3rem;
+    padding: 0.5rem 2rem;
     border-radius: 30px;
 }
 .btn-white {
